Add a cute lil github corner

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <title>Series Replace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="index.css">
+  <script async src="https://unpkg.com/github-corners/dist/embed.min.js"
+          data-href="https://github.com/rossjrw/series-replace"
+          data-target="_blank"></script>
 </head>
 <body>
   <section class="hero is-light">
